2003-06-20  Erik Greenwald <erik@smluc.org>

	* (many)
	Removed trailing spaces and tabs.

2003-05-15  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* src/arch/alsa/alsa.c:
	Moves alsa/asoundlib.h inclusion below sys/time.h

2003-05-07  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* src/al_filter.c:
	Changed doppler to multiply existing pitch, if present.

2003-04-01  J. Valenzuela  <jvalenzu@infinite-monkeys.org>

	* misc
	Joe Tennies's vector patches

2003-03-23  Joseph Valenzuela  <jvalenzu@formosa.infinite-monkeys.org>

	* src/al_source.c:
	Sunil's updated patch

2003-03-21  Joseph Valenzuela  <jvalenzu@formosa.infinite-monkeys.org>

	* src/al_source.c
	queueing pizzatch

2003-01-13  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* al/aluttypes.h
	* linux/include/al/alexttypes.h
	Added AL_PROVIDES_ALUT and LAL_OPENAL defines.

	* openal.spec
	added file

	* Changelog
	Removed "formosa." from my email

	* src/arch/morphos/morphos_dispatcher.c
	* src/arch/morphos/morphos_dispatcher.h
	* src/arch/morphos/morphos_native.c
	* src/arch/morphos/morphos_native.h
	* src/mutex/morphosmutex.c
	* src/mutex/morphosmutex.h
	* src/threads/morphosthreads.c
	* src/threads/morphosthreads.h
	Added Ruediger Hanke <tomjoad@muenster.de>'s MorphOS files.

2003-01-06  Erik Greenwald <erik@smluc.org> <erik@math.smsu.edu>

	* src/arch/bsd/bsd_dsp.c
	* src/arch/bsd/bsd_dsp.h
	Fixes for FreeBSD 4.7 (-stable)

2003-01-02  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* src/arch/linux/lin_dsp.c
	Fix to try /dev/sound/dsp as well as /dev/dsp.  Thanks to
	Sebastian Kapfer for that.

	* test/.cvsignore
	* test/testattributes.c
	* test/Makefile.in
	Added attribute testing

	* src/al_types.h
	Added space for flag saving, context/device association.

	* src/alc/alc_context.c
	* src/alc/alc_device.c
	* src/alc/alc_device.h
	Context attribute management

	* src/al_source.c
	Addition queue fixes.

2002-12-30  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>
